Closed Bug 394859 Opened 17 years ago Closed 17 years ago

Gecko lost its connection with X server

Categories

(Core Graveyard :: GFX: Gtk, defect)

1.8 Branch
x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: stephan.klein, Assigned: MatsPalmgren_bugz)

References

()

Details

(Keywords: crash, verified1.8.1.10)

Attachments

(4 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.6) Gecko/20070827 Ubuntu/7.10 (gutsy) Firefox/2.0.0.6 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.6) Gecko/20070827 Ubuntu/7.10 (gutsy) Firefox/2.0.0.6 When loading the specified website, the browser crashes, leaving these messages in the command line: The application 'gecko' lost its connection to the display :0.0; most likely the X server was shut down or you killed/destroyed the application. With the Html Validator 0.8.4.0 extension enabled, the message looks different: WARNING: Can not create DiagLog file: /home/stephantom/.mozilla/firefox/21gjiiwn.default/tidy/tidy_last_validated.html spvalid:2991556152.4011:E: cannot open output file "/home/stephantom/.mozilla/firefox/21gjiiwn.default/tidy/spvalid.err" (Permission denied) gecko: Fatal IO error 104 (Connection reset by peer) on X server :0.0. Reproducible: Always Steps to Reproduce: 1. Open Firefox/2.0.0.6 under Ubuntu Gutsy (Gnome). 2. Load http://www.photoshopstar.com/graphics/professional-glossy-buttons/ 3. Crash. Actual Results: The browser crashes. Expected Results: The website should be displayed.
Component: General → GFX: Gtk
Keywords: crash
QA Contact: general → gtk
Version: unspecified → 1.8 Branch
Attached file stack
Whiteboard: DUPEME
Attached file Testcase #1
Stephan, what size (in pixels) is your screen?
My screen is 1280x800, the viewport is 1280x552. Your testcase crashes me successfully.
I have 2560x1600. I was speculating that this bug only occurred for screen heights >= 1600, but apparently not... We have code that limits the font size to twice the screen height: http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/gfx/src/gtk/nsFontMetricsXft.cpp&rev=MOZILLA_1_8_BRANCH&root=/cvsroot&mark=250,368#352 FWIW, on my system, the bug occurs for 3200 (which is the value of mPixelSize after being clamped by the code above). If I set an absolute limit to 3199 then the bug does not occur...
Attached patch wallpaperSplinter Review
This fixes it for me.
Comment on attachment 279593 [details] [diff] [review] wallpaper No guaranties it fixes it for everyone, but I think it's low risk and perhaps worth it for branch. Feel free to reject it.
Attachment #279593 - Flags: superreview?(dbaron)
Attachment #279593 - Flags: review?(dbaron)
Assignee: nobody → mats.palmgren
Comment on attachment 279593 [details] [diff] [review] wallpaper r+sr=dbaron. Sorry for the delay.
Attachment #279593 - Flags: superreview?(dbaron)
Attachment #279593 - Flags: superreview+
Attachment #279593 - Flags: review?(dbaron)
Attachment #279593 - Flags: review+
Attachment #279593 - Flags: approval1.8.1.8?
I guess the fact that Mats was able to fix it can be taken as confirmation
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #279593 - Flags: approval1.8.1.8? → approval1.8.1.9?
Comment on attachment 279593 [details] [diff] [review] wallpaper approved for 1.8.1.10, a=dveditz for release-drivers
Attachment #279593 - Flags: approval1.8.1.10? → approval1.8.1.10+
MOZILLA_1_8_BRANCH: mozilla/gfx/src/gtk/nsFontMetricsGTK.cpp 1.280.6.4 mozilla/gfx/src/gtk/nsFontMetricsPango.cpp 1.16.2.8 mozilla/gfx/src/gtk/nsFontMetricsXft.cpp 1.69.4.3 -> FIXED
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: in-testsuite?
Keywords: fixed1.8.1.10
Resolution: --- → FIXED
Whiteboard: DUPEME
Attached patch Mochitest.diffSplinter Review
verified fixed 1.8.1.10 using Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.10) Gecko/2007111504 Firefox/2.0.0.10 and the testcase - no crash on testcase - adding verified keyword
It appears this limit wasn't quite enough in some cases, see bug 394859.
... bug 407842 that is.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: