Lower the font size max limit by 2px to avoid X error. b=394859 r+sr=dbaron a=dveditz