mozilla/gfx/src/gtk/nsFontMetricsXft.cpp
@@ -365,7 +365,7 @@ nsFontMetricsXft::Init(const nsFont& aFont, nsIAtom* aLangGroup,
     // Make sure to clamp the pixel size to something reasonable so we
     // don't make the X server blow up.
     nscoord screenPixels = gdk_screen_height();
-    mPixelSize = PR_MIN(screenPixels * FONT_MAX_FONT_SCALE, mPixelSize);
+    mPixelSize = PR_MIN((screenPixels - 1) * FONT_MAX_FONT_SCALE, mPixelSize);
 
     // enumerate over the font names passed in
     mFont.EnumerateFamilies(nsFontMetricsXft::EnumFontCallback, this);
